correção de exibição

--- a/mobile.css
+++ b/mobile.css
@@ -53,7 +53,8 @@
                 height: auto;
                 min-height: 10em;
                 padding: 1em;
-                background-size: 100%;
+                background-size: contain;
+                background-clip: content-box;
                 background-position: right;
                 
 
@@ -161,7 +162,8 @@
 
         & .container {
             & .item1{
-                max-height: 8em;
+                max-height: 9em;
+                width: 100%;
                 background-size: contain;
                 background-clip: content-box;
                 background-position-y: -1.5em;
