--- a/mobile.css
+++ b/mobile.css
@@ -233,20 +233,27 @@
             & .item4 {
                 & .description {
                     & p {
-                        font-size: 1em;
+                        margin-top: 0.3em;
+                        font-size: 1.8em;
                         margin-left: 0;
+                        letter-spacing: 0.15em;
                     }
 
                     & h3 {
-                        font-size: 1.8em;
+                        font-size: 1.9em;
                     }
                 }
             }
 
             & .item5 {
                 & .description {
+                    & p{
+                        font-size: 1.3em;
+                        margin-left: 0;
+                        letter-spacing: 0.15em;
+                    }
                     & h3 {
-                        font-size: 1.2em;
+                        font-size: 2em;
                     }
                 }
             }
