--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
     display: flex;
     flex-direction: column;
-    background-image: url('assets/background.png');
+    background-image: url('assets/background.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
