otimização de imagens

--- a/style.css
+++ b/style.css
@@ -227,13 +227,13 @@ body {
         }
 
         & .item3 {
-            background-image: url('assets/note_2_11zon.webp');
+            background-image: url('assets/note_11zon.webp');
             background-size: cover;
             background-position-y: center;
         }
 
         & .item4 {
-            background-image: url('assets/marjorie_1_11zon.webp');
+            background-image: url('assets/marjorie_5_11zon.webp');
             background-size: cover;
             background-position-y: center;
 
